Single Spark Code Class File